037_array_subseq/grade.txt
Grading at 02/02/2018:20:20:42.302888
For commit ID 78c9ede1199afde1438da51b26471e1a7b353302
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:7:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return NULL;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
